# api/server_dto.go
@@ -1,0 +1,5 @@
+package api
+
+type ErrorResponse struct {
+	Message string `json:"message" example:"Invalid request"`
+}
