# app/cat/cat_dto.go
@@ -2,10 +2,15 @@ package cat
 
 type CatDto struct {
 	ID       int    `json:"id"`
-	Name     string `json:"name"`
 	Birthday string `json:"birthday"`
+	Name     string `json:"name"`
 }
 
 type ListCatsDto struct {
 	Data []CatDto `json:"data"`
+}
+
+type CatCmd struct {
+	Birthday string `json:"birthday" example:"2000-01-01"`
+	Name     string `json:"name" example:"Mimoso"`
 }
